Fortunately, the playdoh folks set up vendor-local to override vendor, so I've just added simon wex's bleach fork as a git submodule there. Ultimately, we'll be pushing his fork's changes upstream to bleach, where it will go through security review, at which point we'll just use the newly-updated bleach in vendor... But for development purposes now, we'll use his fork.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor"]
 	path = vendor
 	url = git://github.com/mozilla/playdoh-lib.git
+[submodule "vendor-local/src/bleach"]
+	path = vendor-local/src/bleach
+	url = git://github.com/simonwex/bleach.git
