--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
+
 python:
   - "2.7"
-before_script:
-  - mysql -u root -e 'create database playdoh_app;'
+
 install:
   - (cd vendor && git submodule update --init --recursive)
   - pip install -r requirements/compiled.txt
   - cp webpagemaker/settings/local.py-dist webpagemaker/settings/local.py
+  - mysql -e 'create database playdoh_app;'
   - python manage.py syncdb --noinput
+
 script: make test
