Initial attempt at adding universal nav.
Still lots of things wrong here, e.g.:

* font in universal nav is myriad instead of open sans.
* mozilla thimble logo is super small now

But will resolve them soon.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vendor-local/src/requests"]
 	path = vendor-local/src/requests
 	url = git://github.com/kennethreitz/requests.git
+[submodule "media/webmaker-nav"]
+	path = media/webmaker-nav
+	url = git://github.com/toolness/webmaker-nav.git
