Added clopenbadger-client lib and basic badge integration.
This lacks real CSS; the badge widget right now looks very obviously
temporary. It also doesn't yet show the same information that the
mockups present--it's more just an integration proof-of-concept.

Also, it's plugged into the fake clopenbadger server that
clopenbadger-consumer uses for its test suite. Right now this means:

* badges earned will only be "remembered" until the page is
  closed/reloaded.
* badge criteria are all fake and hard-coded into badge-ui.js.
* badges aren't remembered on a per-user basis; log in as foo@bar.org,
  earn a badge, logout and then log in as baz@bar.org and you'll have
  the same badges as the previous user.

Once a real clopenbadger server is put up somewhere, this will all
go away.

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vendor-local/src/pyjwt"]
 	path = vendor-local/src/pyjwt
 	url = git://github.com/progrium/pyjwt.git
+[submodule "media/clopenbadger"]
+	path = media/clopenbadger
+	url = git://github.com/toolness/clopenbadger-consumer.git
